--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="./css/index.css">
     <script src="https://www.jq22.com/jquery/vue.min.js"></script>
     <script src="./js.js"></script>
+    <script src="./jquery-1.12.4.js"></script>
 </head>
 
 <body>
     <div class="box1">小家伙,我会一直陪着你。</div>
+    <h3>老婆也太好看了叭</h3>
     <div class="qwq">
-        <h3>老婆也太好看了叭</h3>
         <div id="app">
             <div class="box">
                 <!--<button @click="imgMove">点击</button>-->
@@ -35,6 +36,10 @@
                         <span v-for="(item,index) in pressList" :class="{active:item.isShow}"></span>
                     </div>
                 </div>
+            </div>
+            <div class="fn">
+                <img src="./images/5.jpg" class="imgs" alt="">
+                <h4>和崽崽牵手手</h4>
             </div>
         </div>
     </div>
