--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <script src="https://www.jq22.com/jquery/vue.min.js"></script>
     <script src="./js.js"></script>
     <script src="./jquery-1.12.4.js"></script>
